fix: realigning icons in uploads manager

--- a/src/elements/content-uploader/ItemProgress.scss
+++ b/src/elements/content-uploader/ItemProgress.scss
@@ -4,6 +4,5 @@
 }
 
 .bcu-progress-label {
-    min-width: 40px; // 100% takes up 31px + 9px padding
-    padding-right: 9px;
+    min-width: 31px; // 100% takes up 31px
 }
